# pmake-templates

./: pmake-info.json
C/executable/console/: CMakeLists.txt
C/executable/console/!PROJECT!/: CMakeLists.txt
CXX/executable/console/: CMakeLists.txt
CXX/executable/console/!PROJECT!/: CMakeLists.txt
CXX/executable/console/!PROJECT!/source/: CMakeLists.txt
CXX/executable/console/cmake/: static_analyzers.cmake
CXX/executable/console/cmake/static_analyzers/: cppcheck.cmake
c/: pmake-info.json
c++/: pmake-info.json
c++/executable/console/: CMakeLists.txt
c++/executable/console/!PROJECT!/: CMakeLists.txt
c++/executable/console/cmake/: static_analyzers.cmake
c/executable/console/: CMakeLists.txt  CMakePresets.json
c/executable/console/!PROJECT!/: CMakeLists.txt
c/executable/console/!PROJECT!/source/: CMakeLists.txt
c/executable/console/cmake/: static_analyzers.cmake
c/executable/console/cmake/static_analyzers/: clang_tidy.cmake
